--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'France -- Description and travel'
 - !lcc 'PT'
+- GITenberg
 title: De vroolijke tocht
 url: http://www.gutenberg.org/ebooks/27490
